packages/jsts/tests/dbd/benchmark/TypeError/T01 Cannot read properties of undefined/T01-15/fixed.js
const foo = require('./fixed-dep');
foo(undefined);
